# dcli

./: .gitignore  .travis.yml  LICENSE.md  README.md  RELEASE.md  scratch.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dcli.yaml  rust.yaml
dclidp/: README.md  dclidp.py
dclis/: Cargo.toml  README.md  readme.md
dclis/src/: apiclient.rs  main.rs  memberidsearch.rs  platform.rs
examples/: README.md  dclisyncd.ps1  mail_report  osx_status_notification  session  session.ps1  stats_report  status_notification  status_notification.ps1  status_notification_osx  status_notification_win.ps1  windows_status_notification.ps1
lib/: dclid
service/: README.md  dcli_sync_manager.py  dclisync.service
src/: Cargo.toml  cargo.toml  rust-toolchain.toml  rustfmt.toml
src/dcli/: Cargo.toml  README.md  actitvity_store_schema.sql  activitystoreinterface.sql
src/dcli/src/: activity.rs  activitystoreinterface.rs  apiclient.rs  apiinterface.rs  apiutils.rs  character.rs  crucible.rs  cruciblestats.rs  deserialization.rs  emblem.rs  error.rs  lib.rs  manifest.rs  manifestinterface.rs  mode.rs  moment.rs  output.rs  platform.rs  playeractivitiessummary.rs  playeractivitysummary.rs  standing.rs  statscontainer.rs  timeperiod.rs  utils.rs
src/dcli/src/enums/: character.rs  completionreason.rs  itemtype.rs  medaltier.rs  mod.rs  mode.rs  moment.rs  platform.rs  standing.rs  stat.rs  weaponsort.rs
src/dcli/src/manifest/: activitydefinition.rs  definitions.rs  destinationdefinition.rs  displayproperties.rs  mod.rs  placedefinition.rs
src/dcli/src/response/: activities.rs  character.rs  cr.rs  drs.rs  ggms.rs  gmd.rs  gpr.rs  manifest.rs  mod.rs  pgcr.rs  sdpr.rs  stats.rs  utils.rs
src/dclia/: Cargo.toml  README.md
src/dclia/src/: main.rs
src/dcliad/: Cargo.toml  README.md
src/dcliad/src/: main.rs
src/dcliah/: Cargo.toml  README.md
src/dcliah/src/: main.rs  startmoment.rs
src/dclias/: Cargo.toml  README.md
src/dclias/src/: main.rs
src/dclic/: Cargo.toml  README.md
src/dclic/src/: main.rs
src/dclics/: Cargo.toml  README.md
src/dclics/src/: main.rs
src/dclidp/: README.md
src/dclif/: Cargo.toml  README.md
src/dclif/src/: classascii.rs  main.rs
src/dclim/: Cargo.toml  README.md
src/dclim/foo/: manifest_info.json
src/dclim/src/: main.rs  manifest_info.rs
src/dclims/: Cargo.toml  README.md
src/dclims/src/: main.rs
src/dclis/: Cargo.toml  README.md
src/dclis/src/: main.rs  memberidsearch.rs
src/dcliserv/: Cargo.toml
src/dclistat/: Cargo.toml  README.md  cargo.toml
src/dclistat/src/: main.rs
src/dclisync/: Cargo.toml  README.md
src/dclisync/service/: dclisync.service
src/dclisync/src/: main.rs
src/dclitime/: Cargo.toml  README.md
src/dclitime/src/: datetimeformat.rs  eventmoment.rs  main.rs
src/tell/: Cargo.toml  README.md
src/tell/src/: lib.rs  macros.rs  tell.rs
tests/: README.md  runapps  runapps.bat
