[package]
name = "dclis"
version = "0.1.0"
authors = ["Mike Chambers <mikechambers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
reqwest = { version="0.10.8", features=["json"] }
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"
tokio = { version="0.2.21", features=["full"] }
exitfailure = "0.5.1"
percent-encoding = "2.1.0"
