[package]
name = "dcli"
#version
version = "0.9.0"
authors = ["Mike Chambers <mikechambers@gmail.com>"]
edition = "2018"
description = "Library for the dcli collection of command line tools for Destiny 2."
homepage = "https://www.mikechambers.com"
repository = "https://github.com/mikechambers/dcli"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.11.4"}
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.82"
serde_repr = "0.1.7"
zip = "0.5.13"
chrono = "0.4.19"
percent-encoding = "2.1.0"
sqlx = { version ="0.5.5", features=[ "runtime-tokio-rustls", "sqlite" ] }
futures = "0.3.15"
static_assertions = "1.1.0"
crossterm = "0.20.0"
dirs-next = "2.0.0"
log = "0.4.17"
indicatif = "0.17.2"

tell = { path = "../tell/"}
