[package]
name = "dclia"
#version
version = "0.3.8"
authors = ["Mike Chambers <mikechambers@gmail.com>"]
description = "Command line tool for retrieving information on current activity for specified player character."
homepage = "https://www.mikechambers.com"
repository = "https://github.com/mikechambers/dcli"
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tokio = { version="0.2.21", features=["full"] }

dcli = { path = "../dcli/"}