[package]
name = "dclia"
#version
version = "0.5.63"
authors = ["Mike Chambers <mikechambers@gmail.com>"]
description = "Command line tool for retrieving information on current activity for specified player character."
homepage = "https://www.mikechambers.com"
repository = "https://github.com/mikechambers/dcli"
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tokio = { version="1.0.1", features=["full"] }

dcli = { path = "../dcli/"}