[package]
name = "dclia"
#version
version = "0.99.1"
authors = ["Mike Chambers <mikechambers@gmail.com>"]
description = "Command line tool for retrieving information on current activity for specified player character."
homepage = "https://www.mikechambers.com"
repository = "https://github.com/mikechambers/dcli"
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
tokio = { version="1.21.2", features=["full"] }
log = "0.4.17"
env_logger = "0.9.3"

tell = { path = "../tell/"}
dcli = { path = "../dcli/"}
