[package]
name = "dcliad"
#version
version = "0.5.5"
authors = ["Mike Chambers <mikechambers@gmail.com>"]
edition = "2018"
description = "Command line tool for viewing Destiny 2 activity details."
homepage = "https://www.mikechambers.com"
repository = "https://github.com/mikechambers/dcli"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tokio = { version="0.2.21", features=["full"] }

dcli = { path = "../dcli/"}