[package]
name = "dcliah"
#version
version = "0.3.7"
authors = ["Mike Chambers <mikechambers@gmail.com>"]
edition = "2018"
description = "Command line tool for viewing Destiny 2 activity history."
homepage = "https://www.mikechambers.com"
repository = "https://github.com/mikechambers/dcli"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tokio = { version="0.2.21", features=["full"] }
chrono = "0.4.19"
num-format = "0.4.0"

dcli = { path = "../dcli/"}