[package]
name = "dclics"
version = "0.1.0"
authors = ["Mike Chambers <mikechambers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tokio = { version="0.2.21", features=["full"] }
chrono = "0.4.19"

dcli = { path = "../dcli/"}