[package]
name = "dclics"
#version
version = "0.4.0"
authors = ["Mike Chambers <mikechambers@gmail.com>"]
description = "Command line tool for retrieving current Destiny 2 Crucible activity stats."
homepage = "https://www.mikechambers.com"
repository = "https://github.com/mikechambers/dcli"
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tokio = { version="0.2.21", features=["full"] }
chrono = "0.4.19"

dcli = { path = "../dcli/"}