[package]
name = "dclics"
#version
version = "0.6.2"
authors = ["Mike Chambers <mikechambers@gmail.com>"]
description = "Command line tool for retrieving current Destiny 2 Crucible activity stats."
homepage = "https://www.mikechambers.com"
repository = "https://github.com/mikechambers/dcli"
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
tokio = { version="1.7.1", features=["full"] }
chrono = "0.4.19"

dcli = { path = "../dcli/"}