[package]
name = "dclim"
#version
version = "0.3.5"
authors = ["Mike Chambers <mikechambers@gmail.com>"]
edition = "2018"
description = "Command line tool for managing and syncing the remote Destiny 2 API manifest database."
homepage = "https://www.mikechambers.com"
repository = "https://github.com/mikechambers/dcli"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tokio = { version="0.2.21", features=["full"] }
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"
reqwest = { version="0.10.8"}
zip = "0.5"

dcli = { path = "../dcli/"}
