[package]
name = "dclim"
#version
version = "0.8.3"
authors = ["Mike Chambers <mikechambers@gmail.com>"]
edition = "2018"
description = "Command line tool for managing and syncing the remote Destiny 2 API manifest database."
homepage = "https://www.mikechambers.com"
repository = "https://github.com/mikechambers/dcli"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
tokio = { version="1.7.1", features=["full"] }
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
reqwest = { version="0.11.4"}
zip = "0.5.13"

dcli = { path = "../dcli/"}
