[package]
name = "dclim"
#version
version = "0.99.4"
authors = ["Mike Chambers <mikechambers@gmail.com>"]
edition = "2018"
description = "Command line tool for managing and syncing the remote Destiny 2 API manifest database."
homepage = "https://www.mikechambers.com"
repository = "https://github.com/mikechambers/dcli"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
tokio = { version="1.21.2", features=["full"] }
serde = "1.0.147"
serde_json = "1.0.87"
serde_derive = "1.0.147"
reqwest = { version="0.11.12"}
zip = "0.5.13"
log = "0.4.17"
env_logger = "0.9.3"

dcli = { path = "../dcli/"}
tell = { path = "../tell/"}
