[package]
name = "dclims"
#version
version = "0.6.2"
authors = ["Mike Chambers <mikechambers@gmail.com>"]
edition = "2018"
description = "Command line tool for searching the Destiny 2 manifest by hash ids."
homepage = "https://www.mikechambers.com"
repository = "https://github.com/mikechambers/dcli"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
tokio = { version="1.7.1", features=["full"] }

dcli = { path = "../dcli/"}