[package]
name = "dclis"
#version
version = "0.3.6"
authors = ["Mike Chambers <mikechambers@gmail.com>"]
edition = "2018"
description = "Command line tool for retrieving primary Destiny 2 member ids."
homepage = "https://www.mikechambers.com"
repository = "https://github.com/mikechambers/dcli"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tokio = { version="0.2.21", features=["full"] }
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"
percent-encoding = "2.1.0"
reqwest = { version="0.10.8"}

dcli = { path = "../dcli/"}