[package]
name = "dclisync"
#version
version = "0.8.5"
authors = ["Mike Chambers <mikechambers@gmail.com>"]
edition = "2018"
description = "Command line tool for downloading and syncing Destiny 2 Crucible activity history."
homepage = "https://www.mikechambers.com"
repository = "https://github.com/mikechambers/dcli"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
tokio = { version="1.7.1", features=["full"] }

dcli = { path = "../dcli/"}

