[package]
name = "dclisync"
#version
version = "0.97.0"
authors = ["Mike Chambers <mikechambers@gmail.com>"]
edition = "2018"
description = "Command line tool for downloading and syncing Destiny 2 Crucible activity history."
homepage = "https://www.mikechambers.com"
repository = "https://github.com/mikechambers/dcli"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
tokio = { version="1.21.2", features=["full"] }
log = "0.4.17"
env_logger = "0.9.3"

dcli = { path = "../dcli/"}
tell = { path = "../tell/"}

[target.'cfg(not(windows))'.dependencies]
signal-hook = "0.3.14"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.2.2"


