[package]
name = "dclitime"
#version
version = "0.5.62"
authors = ["Mike Chambers <mikechambers@gmail.com>"]
edition = "2018"
description = "Command line tool for retrieving Destiny 2 related date / time stamps"
homepage = "https://www.mikechambers.com"
repository = "https://github.com/mikechambers/dcli"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tokio = { version="1.0.1", features=["full"] }
chrono = "0.4.19"

dcli = { path = "../dcli/"}